Restored old wrap support (default no wrapping). Fixes #77.

--- a/src/fitnesse/resources/css/fitnesse_pages.css
+++ b/src/fitnesse/resources/css/fitnesse_pages.css
@@ -9,6 +9,9 @@ label input {
 textarea {
 	font-family: monospace;
 }
+textarea.no_wrap {
+	overflow: scroll;
+}
 .validationerror {
     color: maroon;
     margin: 0 0 0 7.78em;
@@ -21,6 +24,10 @@ textarea {
 	float: left;
 	clear: both;
 }
+.editPage .edit_options label {
+	width: auto;
+}
+
 .editPage #pagename,
 .editPage #helptext {
 	width: 55em;
